[tool.poetry]
name = "resume-ai"
version = "0.1.0"
description = ""
authors = ["june.sh22 <june.sh22@kakaocorp.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.36.0"
langgraph = "^0.1.6"
langchain = "^0.2.7"
langchain-openai = "^0.1.14"
langchain-community = "^0.2.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
